--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>Minimum: 2 pax </li>
 
         </ul>
-        <img src="img/kayak1.jpg" alt=""
+        <img src="img/kayak1.jpg" alt="kayak" title="kayak">
 
     </body>
 </html>
